k8s-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
    - host: k8s-dashboard.local
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
